# CSE560-GPU-Computing

./: README.md
Assignment 1/: CMakeCache.txt  Makefile  balance.cu  cmake_install.cmake  julia.cu
Assignment 1/Assignment01_code/: Assignment01  CMakeCache.txt  CMakeLists.txt  Julia 0.285 + i0.010.png 0 N = 1024  Makefile  cmake_install.cmake  main.cpp1.ii  main.cpp4.ii  main.cudafe1.c  main.cudafe1.cpp  main.cudafe1.gpu  main.cudafe1.stub.c  main.fatbin  main.fatbin.c  main.module_id  main.ptx  main.sm_52.cubin
Assignment 1/Assignment01_code/src/: main.cu
Assignment 1/src/: chatgpt.cu  gpt2.cu  gpt3.cu  main.cu
Assignment 2/: CMakeLists.txt  kernel_11.txt  kernel_3.txt  kernel_5.txt  kernel_7.txt  kernel_9.txt
Assignment 2/Assignment02_code/: Assignment02  CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp1.ii  main.cpp4.ii  main.cudafe1.c  main.cudafe1.cpp  main.cudafe1.gpu  main.cudafe1.stub.c  main.fatbin  main.fatbin.c  main.module_id  main.ptx  main.sm_52.cubin
Assignment 2/Assignment02_code/src/: global.cu  main.cu  shared.cu  shared2.cu  try.cu
Assignment 2/src/: main.cu
Lab 1/: 2020050_Deepam_Sarmah.cu
Lab 2/: race_condition.cu  race_condition_fixed.cu
Lab 3/: CMakeLists.txt  a.out  cuda-mul.cu  cuda-shared-transpose.cu  cuda-transpose.cu  shared-transpose  transpose
Lab 3/src/: cpu_code.cpp  gpu_code.cu
Lab 4/: CMakeLists.txt
Lab 4/src/: AoS.cu  SoA.cu
Lab 5/: 2020050_result.txt  CMakeLists.txt
Lab 5/src/: 2020050_Lab5.cu
Lab 6/: acc-code.cpp  cpu-code.cpp  gpu-code.cu
